@@ -385,7 +385,7 @@
 	}
 	
 	$params=array();
-	$options = array('with_items','only_current_node');
+	$options = array('with_items','only_current_node','not_proxy_hosts');
 	foreach($options as $option) $params[$option] = 1;
 	
 	$PAGE_GROUPS = get_viewed_groups(PERM_READ_WRITE, $params);
