@@ -1,5 +1,6 @@
 Changes for 1.6.5
 
+ - [ZBX-882] fixed template linkage form (Artem)
  - [ZBX-879] fixed maximum 30 issues shown in Dahsboard system status (Vedmak)
  - [ZBX-876] removed unused files (Artem)
  - [ZBX-872] fixed group selected in another section of Hosts affects shown proxy members, and proxies shown in Items host dropdown (Vedmak)
